Adding github url

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,10 @@
     <script src="js/jquery.min.js"></script>
   </head>
   <body id="frame">
-    <script src="popup.js"></script>      
-    <img class="header-logo" src="/icons/skip16.png"></img>
+    <script src="popup.js"></script>    
+    <a href="https://github.com/argetima/youtube-skip-adds" target="_blank"> 
+      <img class="header-logo" src="/icons/skip16.png" alt="Logo">
+    </a>  
     <h4 id="title">Youtube Skip Adds v1.0</h4>
     <p id="popup">Youtube Skip Adds</p>
   </body>
