--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Youtube Skip Adds</title>
+    <title>Youtube Ads Skipper.</title>
     <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="css/material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -13,7 +13,7 @@
     <a href="https://github.com/argetima/youtube-skip-adds" target="_blank"> 
       <img class="header-logo" src="/icons/skip16.png" alt="Logo">
     </a>  
-    <h4 id="title">Youtube Skip Adds v1.0</h4>
-    <p id="popup">Youtube Skip Adds</p>
+    <h4 id="title">Youtube Ads Skipper v1.1</h4>
+    <p id="popup">Youtube Ads Skipper</p>
   </body>
 </html>
